<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/white"
        />
    <item
        android:id="@+id/bottom_nav_cost"
        android:icon="@drawable/ic_total_cost"
        android:title="@string/costs"
        app:cnb_backgroundColor="@color/white" />
    <item
        android:id="@+id/bottom_nav_Setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:cnb_backgroundColor="@color/white" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/white"
        />
</menu>