<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LocationOwner.retailer_settingfragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">
            <!-- TODO: Update blank fragment layout -->
            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/login_logo"
                android:transitionName="logo_image" />


            <TextView
                android:id="@+id/costting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/setting"
                android:textColor="@color/textColor"
                android:textSize="40sp" />


            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/language"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_language" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/lang_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="MissingClass,UseSwitchCompatOrMaterialXml" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/themes"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_themes" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="MissingClass, UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/security"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_lock" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/finger_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fingerprint_lock"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="MissingClass, UseSwitchCompatOrMaterialXml" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/notifications"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_notif" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_notifications"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="MissingClass, UseSwitchCompatOrMaterialXml" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>