<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".password_success_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forget_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            android:src="@drawable/imgback" />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/password_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/your_password_has_been_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/secondary"
            android:drawableStart="@drawable/ic_done_dark"
            android:text="@string/login"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>