<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".forgetpassword_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forget_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            android:src="@drawable/imgback" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="40sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/provide_your_account_s_email_for_which_you_want_to_reset_your_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            android:textColorHint="@color/textColor"
            app:hintTextColor="@color/textColor"
            app:boxStrokeColor="@color/textColor"
            app:startIconTint="@color/textColor"
            android:hint="@string/e_mail"
            app:endIconMode="clear_text"
            app:endIconTint="@color/textColor"
            app:startIconDrawable="@drawable/ic_email">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_mail_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:inputType="textEmailAddress"/>


        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/secondary"
                android:onClick="btnSendEmailCode"
                android:text="@string/send"
                android:textColor="@color/white"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <Button
                    android:id="@+id/btn_edit_email"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="10dp"
                    android:layout_weight=".5"
                    android:background="@color/secondary"
                    android:onClick="btnEditEmail"
                    android:text="@string/edit_email"
                    android:textColor="@color/white"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_resent"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight=".5"
                    android:background="@color/secondary"
                    android:onClick="btnResendCode"
                    android:text="@string/resend"
                    android:textColor="@color/white"
                    android:visibility="invisible" />
            </LinearLayout>


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activation_forget_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            android:textColorHint="@color/textColor"
            app:hintTextColor="@color/textColor"
            app:boxStrokeColor="@color/textColor"
            app:startIconTint="@color/textColor"
            android:hint="@string/activation_code"
            app:endIconMode="clear_text"
            app:endIconTint="@color/textColor"
            app:startIconDrawable="@drawable/ic_code"
            android:visibility="invisible">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activation_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:inputType="number"/>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_activation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/secondary"
            android:onClick="btnConfirmEmailCode"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:visibility="invisible"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>