<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".new_password_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/forget_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="8dp"
            android:src="@drawable/imgback" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/create_a_new_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="40sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/your_identity_has_been_verified_set_your_new_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            android:textColorHint="@color/textColor"
            app:hintTextColor="@color/textColor"
            app:boxStrokeColor="@color/textColor"
            app:startIconTint="@color/textColor"

            android:hint="@string/new_password"
            app:endIconTint="@color/textColor"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            android:textColorHint="@color/textColor"
            app:hintTextColor="@color/textColor"
            app:boxStrokeColor="@color/textColor"
            app:startIconTint="@color/textColor"
            android:hint="@string/confirm_password"
            app:endIconTint="@color/textColor"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/secondary"
            android:drawableStart="@drawable/ic_done_dark"
            android:text="@string/save"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>