<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".LocationOwner.retailer_dashboard_Activity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/login_logo"
                android:transitionName="logo_image" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/ip_setting"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

<!--  time-->
        <Spinner
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

<!--//speed-->
        <Spinner
            android:id="@+id/speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />


            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/secondary"
                android:drawableStart="@drawable/ic_done_dark"
                android:text="@string/save"
                android:textColor="@color/white" />





    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/total_cost"
        android:textColorHint="@color/secondary"
        app:boxBackgroundColor="@color/light"
        app:boxStrokeColor="@color/secondary"
        app:boxStrokeWidthFocused="2dp"

        app:endIconTint="@color/secondary"
        app:startIconDrawable="@drawable/ic_total_cost"
        app:startIconTint="@color/secondary">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/total_cost"
            android:inputType="number"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
</LinearLayout>
