<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_Activity"
    android:background="@color/background">


    <ImageView
        android:id="@+id/splash_logo"
        android:contentDescription="@string/multiple_choice_user"
        android:layout_width="291dp"
        android:layout_height="291dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/slash_logo"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mcu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/multiple_choice_user"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to" />

    <TextView
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/to"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="50sp"
        android:transitionName="logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>